--- a/app/app.css
+++ b/app/app.css
@@ -1,30 +1,66 @@
 /* app css stylesheet */
-
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+html, body {
+  width:100%;
+  height: 100%;
 }
 
-.menu:before {
-  content: "[";
+a, a:hover, a:focus {
+  text-decoration: inherit;
+  color: inherit;
 }
 
-.menu:after {
-  content: "]";
+.sidebar li.brand{
+  height: 130px;
+  background-color: #CC8449;
 }
 
-.menu > li {
-  display: inline;
+.sidebar li.brand:hover {
+  background-color: #E8A268;
 }
 
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
+.sidebar ul {
+  margin: 0px;
+  padding: 0px;
 }
 
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+.sidebar li {
+  width: auto;
+  padding: 20px;
+  background-color: steelblue;
+  margin: 10px;
+  color: #fff;
+}
+
+.sidebar li:hover {
+  background-color: #74BAF7;
+  cursor: pointer;
+}
+
+header.header {
+  height: 200px;
+  width:100%;
+  background-color: #333;
+}
+
+.logo {
+  background-color: inherit;
+  height: 100%;
+  width: 300px;
+}
+
+.sidebar-wrapper {
+  width: 300px;
+  height: 100%;
+  background-color: #4D4E57;
+  float: left;
+  position: absolute;
+}
+
+.content-wrapper {
+  height: 100%;
+  background-color: #e1e1e1;
+  position: absolute;
+  left: 300px;
+  right: 0px;
+  padding: 100px;
 }
