--- a/app/app.css
+++ b/app/app.css
@@ -2,6 +2,7 @@
 html, body {
   width:100%;
   height: 100%;
+  position: fixed;
 }
 
 a, a:hover, a:focus {
@@ -57,8 +58,8 @@ header.header {
   width: 300px;
   height: 100%;
   background-color: #4D4E57;
-  float: left;
   position: absolute;
+  left: 0px;
 }
 
 .content-wrapper {
@@ -69,3 +70,24 @@ header.header {
   right: 0px;
   padding: 50px 100px;
 }
+
+.notes-wrapper {
+  transition: all 250ms ease-out;
+  position: absolute;
+  overflow: hidden;
+  background-color: #DCDFE0;
+  box-shadow: 0px 0px 20px #333;
+  padding: 50px;
+  width: 500px;
+  right: -500px;
+}
+
+.notes textarea {
+  width: 100%;
+  background-color: #DCF2E8;
+}
+
+.notes-wrapper.shown {
+  right: 0px;
+}
+
