--- a/app/app.css
+++ b/app/app.css
@@ -69,6 +69,7 @@ header.header {
   left: 300px;
   right: 0px;
   padding: 50px 100px;
+  overflow-y: scroll;
 }
 
 .notes-wrapper {
@@ -91,3 +92,8 @@ header.header {
   right: 0px;
 }
 
+.search-results {
+  margin-top: 50px;
+  padding: 50px;
+  box-shadow: 0px 0px 50px #333;
+}
